--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   </div>
                   <div class="col-md-12 text-center">
                     <div class="col-md-12 text-center">
-                      <a href="https://drive.google.com/drive/folders/1MOey7vjE21ptSRE42Cchntl6NCFUY1CJ" class="button button-a button-big button-rouded">Download CV</a>
+                      <a href="https://drive.google.com/drive/folders/1MOey7vjE21ptSRE42Cchntl6NCFUY1CJ?usp=sharing" class="button button-a button-big button-rouded">Download CV</a>
                     </div>
                    </div>
                 </div>
