--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   </div>
                   <div class="col-md-12 text-center">
                     <div class="col-md-12 text-center">
-                      <a href="https://drive.google.com/drive/folders/1MOey7vjE21ptSRE42Cchntl6NCFUY1CJ?usp=sharing" class="button button-a button-big button-rouded">Download CV</a>
+                      <a href="https://drive.google.com/file/d/1HE4d7s5kQM155A1vmSZWXKVjbXbmJm2A/view?usp=sharing" class="button button-a button-big button-rouded">Download CV</a>
                     </div>
                    </div>
                 </div>
@@ -489,7 +489,7 @@
               </h3>
               <p>
                 You can view all my certificates
-                <a href="https://drive.google.com/drive/folders/1C2TGQzUgamuk9CXuNmuurgA0b2FMIblC?usp=sharing" style="color: blue; text-decoration: underline;">here</a>,
+                <a href="https://drive.google.com/drive/folders/1MOey7vjE21ptSRE42Cchntl6NCFUY1CJ?usp=drive_link" style="color: blue; text-decoration: underline;">here</a>,
                 but these are my top certificates.
               </p>              
               <div class="line-mf"></div>
