--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   </div>
                   <div class="col-md-12 text-center">
                     <div class="col-md-12 text-center">
-                      <a href="https://drive.google.com/file/d/1HE4d7s5kQM155A1vmSZWXKVjbXbmJm2A/view?usp=sharing" class="button button-a button-big button-rouded">Download CV</a>
+                      <a href="https://drive.google.com/drive/folders/1Jo8KFCuzCt44hecgBd2E9L7RxxMcYN6O?usp=drive_link" class="button button-a button-big button-rouded">Download CV</a>
                     </div>
                    </div>
                 </div>
